--- a/css/main.css
+++ b/css/main.css
@@ -423,6 +423,15 @@ img.signature{
     margin-left: -17%;
     padding-right: 28px;
     position: relative;
+    /* text-align: right; */
+    width: 53%;
+}
+
+.listing .listing-event .data.left.align-right {
+    float: left;
+    margin-left: -17%;
+    padding-right: 28px;
+    position: relative;
     text-align: right;
     width: 53%;
 }
@@ -1759,6 +1768,12 @@ ul.hb-list li h6 {
 	.input-columns .column1 .column-inner{padding:0;}
 	.block-info .col-md-4:not(:last-child){margin-bottom:30px;}
 	
+}
+
+@media only screen and (min-width: 479px) {
+    ul.data.left.align-left li {
+        float: left;
+    }
 }
 
 
